--- a/app/_layouts/_main.pug
+++ b/app/_layouts/_main.pug
@@ -1,8 +1,16 @@
+include /_mixins/_social-list.pug
+
 block globalsVars
   -
     const siteName = 'My Site';
     const siteUrl = 'https://www.google.com';
     const themeColor = '#2F3BA2';
+    const socialLinks = {
+      'Facebook': 'https://www.facebook.com/bluestatedigital/',
+      'Twitter': 'https://twitter.com/BSD',
+      'YouTube': null,
+      'Instagram': 'https://www.instagram.com/bsdwire/'
+    };
 
 block canonicalUrl
   - const canonicalUrl = siteUrl;
@@ -15,58 +23,27 @@ block metaVars
       image: 'http://ghk.h-cdn.co/assets/16/09/980x490/landscape-1457107485-gettyimages-512366437.jpg'
     };
 
+block bodyClass
+  - const bodyClass = ''
+
 doctype html
-html
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    title #{siteName} | #{meta.pageTitle}
-    meta(content=meta.pageTitle, property='og:title')
-    meta(content=siteName, property='og:site_name')
-    meta(content=meta.description, property='og:description')
-    meta(content=meta.image, property='og:image')
-    meta(content=canonicalUrl, property='og:url')
-    link(rel='canonical', href=canonicalUrl)
-
-    // Disable tap highlight on IE
-    meta(name='msapplication-tap-highlight', content='no')
-
-    // Web Application Manifest
-    link(rel='manifest', href='/manifest.json')
-
-    // Add to homescreen for Chrome on Android
-    meta(name='mobile-web-app-capable', content='yes')
-    meta(name='application-name', content=siteName)
-    link(rel='icon', sizes='192x192', href='/images/touch/chrome-touch-icon-192x192.png')
-
-    // Add to homescreen for Safari on iOS
-    meta(name='apple-mobile-web-app-capable', content='yes')
-    meta(name='apple-mobile-web-app-status-bar-style' content='black')
-    meta(name='apple-mobile-web-app-title', content=siteName)
-    link(rel='apple-touch-icon', href='/images/touch/apple-touch-icon.png')
-
-    // Tile icon for Win8 (144x144 + tile color)
-    meta(name='msapplication-TileImage', content='/images/touch/ms-touch-icon-144x144-precomposed.png')
-    meta(name='msapplication-TileColor', content=themeColor)
-
-    // Color the status bar on mobile devices
-    meta(name='theme-color', content=themeColor)
-
-    // Stylesheets
-    link(href='/styles/main.css', rel='stylesheet')
+html(language='en')
+  include /_includes/_html-header.pug
 
   body(class=bodyClass)
-    #svg-sprites(style='display:none;')
+    a(href='#content')#skip-link.sr-only-focusable Skip to main content.
+    #svg-sprites.svg-sprites
       include /_includes/svg-sprites.svg
-    header
-      block header
-    main#content.main-content
-      block content
-    footer
-      block footer
+    .page-wrapper
+      include /_includes/_header.pug
+      block precontent
+      main#content.main-content.page-contain
+        block content
+      include /_includes/_footer.pug
     block postcontent
-    script(src='/scripts/main.min.js')
+
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    script(src='/scripts/main.js')
 
     // Update this with the appropriate GA account ID or remove.
     script.
