Switch to using stylelint instead of sass lint
 to be more inline with WP starter kit

--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -13,7 +13,7 @@
 }
 
 .nav-toggle {
-  @include position(absolute, 10px 10px null null)
+  @include position(absolute, 10px 10px null null);
   background: none;
   border: 0;
   color: $color-white;
