Add in markdown rendering filter for variables

--- a/app/_layouts/_home.pug
+++ b/app/_layouts/_home.pug
@@ -15,4 +15,4 @@ block content
       each item, index in contents.sections
         section(id=`section-${index + 1}`)
           h2= item.title
-          != item.contents
+          != md(item.content)
