Add example of hero image.

--- a/app/_layouts/_main.pug
+++ b/app/_layouts/_main.pug
@@ -37,7 +37,7 @@ html(language='en')
     .page-wrapper
       include /_includes/_header.pug
       block precontent
-      main#content.main-content.page-contain
+      main#content.main-content
         block content
       include /_includes/_footer.pug
     block postcontent
