--- a/app/_layouts/_home.pug
+++ b/app/_layouts/_home.pug
@@ -2,17 +2,25 @@ extends /_layouts/_main.pug
 
 block content
   article.content-artice
-    header.content-header
-      h1= contents.title
-      p.lead= contents.lead
-    aside.content-sidebar
-      nav.internal-nav
-        ul.unstyled-list
-          each item, index in contents.sections
-            li
-              a(href=`#section-${index + 1}`).js-smooth-scroll= item.title
-    article.content-body
-      each item, index in contents.sections
-        section(id=`section-${index + 1}`)
-          h2= item.title
-          != md(item.content)
+    .content-header-wrapper(
+      style= contents.image ? `background-image: url(${contents.image})` : '',
+      class= {
+        'has-image': contents.image
+      }
+    )
+      .page-contain
+        header.content-header
+          h1= contents.title
+          p.lead= contents.lead
+    .page-contain
+      aside.content-sidebar
+        nav.internal-nav
+          ul.unstyled-list
+            each item, index in contents.sections
+              li
+                a(href=`#section-${index + 1}`).js-smooth-scroll= item.title
+      article.content-body
+        each item, index in contents.sections
+          section(id=`section-${index + 1}`)
+            h2= item.title
+            != md(item.content)
