Add index template examples

--- a/app/_includes/_header.pug
+++ b/app/_includes/_header.pug
@@ -8,8 +8,8 @@ header.main-header
       li
         a(href='#') About
       li
-        a(href='#') Store
+        a(href='/news') News
       li
-        a(href='#') Portfolio
+        a(href='/posts') Blog
       li
         a(href='#') Contact Us
