--- a/app/_layouts/_post.pug
+++ b/app/_layouts/_post.pug
@@ -1,5 +1,6 @@
 extends /_layouts/_main.pug
 
 block content
- if contents.body
-   article!= contents.body
+  article.content-artice
+    if contents.body
+      article!= contents.body
