Update files for Netlify CMS Identity support

--- a/app/_includes/_html-header.pug
+++ b/app/_includes/_html-header.pug
@@ -36,3 +36,6 @@ head
 
   // Stylesheets
   link(href='/styles/main.css', rel='stylesheet')
+
+  // Netlify identity
+  script(src='https://identity.netlify.com/v1/netlify-identity-widget.js')
